<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>Java Twitch API (JTA)</name>
    <description>A java API to interact with Twitch IRC.</description>
    <url>https://jta.twitchapis.org</url>

    <groupId>org.twitchapis.jta</groupId>
    <artifactId>JavaTwitchAPI</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <inceptionYear>2020</inceptionYear>
    <organization>
        <name>TwitchApis</name>
        <url>https://twitchapis.org</url>
    </organization>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/twitchapis/JavaTwitchAPI/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:https://github.com/twitchapis/JavaTwitchAPI.git</connection>
        <developerConnection>scm:git:ssh://github.com/twitchapis/JavaTwitchAPI.git</developerConnection>
        <url>https://github.com/twitchapis/JavaTwitchAPI</url>
    </scm>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>TwitchApis</id>
            <url>https://twitchapis.org</url>
            <organization>TwitchApis</organization>
            <organizationUrl>https://github.com/TwitchApis</organizationUrl>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>TwitchApis JTA Contributors</name>
            <url>https://github.com/TwitchApis/JavaTwitchAPI/graphs/contributors</url>
        </contributor>
    </contributors>

    <properties>
        <maven.compiler.release>11</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<sonar.projectKey>twitchapis_JavaTwitchAPI</sonar.projectKey>
	<sonar.organization>twitchapis</sonar.organization>
	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>twitchapis-snapshots</id>
            <name>twitchapis-snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.26</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20201115</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.ea.async</groupId>
            <artifactId>ea-async</artifactId>
            <version>1.2.3</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
				<configuration>
					<release>11</release>
					<compilerArgs>
					    <arg>--add-reads</arg>
						<arg>JavaTwitchAPI=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.twitchapis.jta.JTA</mainClass>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
					</archive>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M2</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <DependencyConvergence />
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.1</version>
                <dependencies>
                    <dependency>
                        <groupId>com.github.edwgiz</groupId>
                        <artifactId>maven-shade-plugin.log4j2-cachefile-transformer</artifactId>
                        <version>2.8.1</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/versions/9/module-info.class</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer"></transformer>
                    </transformers>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <createSourcesJar>true</createSourcesJar>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.ea.async</groupId>
                <artifactId>ea-async-maven-plugin</artifactId>
                <version>1.2.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>instrument</goal>
                            <goal>instrument-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
